# SpliteEasy-PFE

./: .env  .env.example  .gitignore  CLAUDE.md  INCOME_SYSTEM_ANALYSIS.md  Makefile  README.md  calculate_expenses.py  check_roles.py  create_income_logs_table.py  create_income_sources.py  create_jar_table.py  create_jar_transactions.py  create_rbac_tables.py  debug_settle.py  docker-compose.yml  force_migrate_transactions.py  frontend.rar  migrate_transactions.py  seed_strategies.py  spliteasy.db  structure.txt  verify_admin_rbac.py  verify_expenses.py  verify_fix_greenlet.py  verify_import.py  verify_ledger_features.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  config.py  crud.py  db.py  debt.py  dependencies.py  fix_debts_loans_tables.py  insert_expenses.sql  main.py  migrate_global_settlement_mode.py  migrate_settlements.py  migrations.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_transaction_migration.py  schemas.py  seed_demo.py  test.py  utils.py
backend/alembic/: README.md  env.py
backend/app/: auth.py  config.py  crud.py  db.py  debt.py  dependencies.py  main.py  migrations.py  seed_demo.py  utils.py
backend/core/: auth.py  config.py  db.py  dependencies.py  migrations.py  settings_store.py
backend/models/: __init__.py  activity.py  announcement.py  debt.py  econome.py  finance.py  friend.py  group.py  notification.py  setting.py  settlement.py  user.py
backend/repositories/: activity.py  admin.py  announcement.py  expense.py  finance.py  group.py  moderation.py  settlement.py  (+2 more)
(+504 files in other folders)
